added enpoints for the model

--- a/BE-WOK-platform/API/appsettings.Development.json
+++ b/BE-WOK-platform/API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLExpress;Database=WOK;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 }
