--- a/BE-WOK-platform/API/appsettings.Development.json
+++ b/BE-WOK-platform/API/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLExpress;Database=WOK;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Issuer": "http://localhost:5000",
+    "Secret": "My ExtrEmly# AmazinG332 nuew S3cr3t K3y @@ h!",
+    "ExpirationInDays": 2
   }
 }
